--- a/index.html
+++ b/index.html
@@ -129,9 +129,30 @@
 <h1> Contact us</h1>
 <h3> Instagram : @theshooshak</h2>
 <h3> Text : 650-804-6512 </h3>
+</div>
+
+<form name="Contact form" action="" method="POST" data-netlify="true">
+	<div class = "form-group">
+		<label for="name"> Your name: </label>
+		<input type="text" class="form-control" name="name" placeholder = "John Doe">
+	</div>
+
+	<div class = "form-group">
+		<label for="emailAddress"> Your email address: </label>
+		<input type="email" class="form-control" name="emailAdress" placeholder = "example@test.com">
+	</div>
+
+	<div class = "form-group">
+		<label for="message"> Your message: </label>
+		<textarea class="form-control" name = "message"  placeholder = "I'd like my shoes painted"></textarea>
+	</div>
+<div class = " subBut text-center">
+	<button type="submit" class = "btn btn-primary mb-2"> Submit</button>
+</div>
+</form>
 
 
-</div> <!--- end of Contact-->
+ <!--- end of Contact-->
 
 
 
