--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<div class="collapse navbar-collapse" id="navbarResponsive">
 		<ul class="navbar-nav ml-auto">
 			<li class="nav-item">
-        	<a class="nav-link" href="#Home">Home <span class="sr-only">(current)</span></a>
+        	<a class="nav-link" href="#home">Home <span class="sr-only">(current)</span></a>
       		</li>
       		<li class="nav-item">
         	<a class="nav-link" href="#services">Services <span class="sr-only">(current)</span></a>
@@ -30,7 +30,7 @@
         	<a class="nav-link" href="#about">About <span class="sr-only">(current)</span></a>
       		</li>
       		<li class="nav-item">
-        	<a class="nav-link" href="#Contact">Contact <span class="sr-only">(current)</span></a>
+        	<a class="nav-link" href="#contact">Contact <span class="sr-only">(current)</span></a>
       		</li>
 
 
